samples/_failures_safe/1761632922_e8136e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_121cbdbe.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_121cbdbe.c:165:17: error: expected declaration or statement at end of input
  165 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_121cbdbe.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_121cbdbe.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_121cbdbe.c:165:17: error: expected declaration or statement at end of input
